Can't scale or rotate mask in movie clip editor #65445

Closed
opened 2019-06-03 13:11:35 +02:00 by Marcin Twarowski · 13 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-02 21:33, hash: 19dcb22a88
Worked: 2.79

Exact steps for others to reproduce the error
Open attached file and try to scale or rotate selected mask.
mask_bug.blend

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-02 21:33, hash: `19dcb22a88` Worked: 2.79 **Exact steps for others to reproduce the error** Open attached file and try to scale or rotate selected mask. [mask_bug.blend](https://archive.blender.org/developer/F7084575/mask_bug.blend)

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

It's probably because Pivot Point is set to 'Individual Origins'. It had been solved at some point, but somehow got reverted. Should definitely be set back to Median Point as standard Pivot Point before 2.80 release.

It's probably because Pivot Point is set to 'Individual Origins'. It had been solved at some point, but somehow got reverted. Should definitely be set back to Median Point as standard Pivot Point before 2.80 release.

Indeed, I didn't catch that. Thanks!

Indeed, I didn't catch that. Thanks!
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Was there any reason this was changed, or did it happen by accident. Couldn't find the commit that changed it quickly.

Was there any reason this was changed, or did it happen by accident. Couldn't find the commit that changed it quickly.

I would say it was changed by accident. The thing is, it works okay if you create a New File and choose VFX. Then the pivot point is correctly set to Median Point. However, if you create a New>General File and go to Masking or Tracking Workspace, the pivot is set to Individual Origins (which is a very confusing setting for users).

I would say it was changed by accident. The thing is, it works okay if you create a New File and choose VFX. Then the pivot point is correctly set to Median Point. However, if you create a New>General File and go to Masking or Tracking Workspace, the pivot is set to Individual Origins (which is a very confusing setting for users).
Member

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Member

I see, so just the templates/workspaces are configured incorrectly?

I see, so just the templates/workspaces are configured incorrectly?

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-06-13 16:03:01 +02:00

@brecht who to assign this to?

@brecht who to assign this to?

This issue was referenced by 245129e8e2

This issue was referenced by 245129e8e2a6fb24b7a3c6623eae9a6b2010c238

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65445
No description provided.