Fix T65445: wrong defaults when appending workspaces from builtin templates